argo/services/audiobookshelf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
spec:
  ingressClassName: traefik
  rules:
    - host: vorleser.cindergla.de
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vorleser.cindergla.de
